tests/type_errors/variant_constructor_mismatch.nos
# expect_error: type mismatch
# Test variant constructor type mismatch - Good expects Int but gets String

type Status = Good(Int) | Bad(String)

main() = Good("not an int")
